# agent-game-dev

./: LICENSE  README.md  pyproject.toml
core/: model_factory.py  pyproject.toml  role.py  team.py  team_share_state.py  tool.py
core/prompts/: game_designer_prompts.py  markdown_tool_prompts.py  role_prompts.py
core/roles/: game_designer.py
core/tools/: doc_tool.py  markdown_tool.py  submit_output_to_user_tool.py  web_search_tool.py
game_dev/: pyproject.toml
game_dev/prompts/: game_designer_prompts.py
game_dev/roles/: game_designer.py
samples/base-sample/: pyproject.toml
