[project]
name = "agent-game-dev"
version = "0.1.0"
description = "Your one person multi-agent game dev studio framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-game-dev-core>=0.1.0",
    "agent-game-dev-game-dev>=0.1.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
extra-index-url = [
    "https://pypi.org/simple/",
]
prerelease = "allow"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
agent-game-dev-core = { path = "core" }
agent-game-dev-base-sample = { path = "samples/base-sample" }
agent-game-dev-game-dev = { path = "game_dev" }
[tool.pyright]
include = ["core", "samples/base-sample", "game_dev"]
exclude = ["**/tests/**", "docs", "**/.venv/**"]
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = false
reportMissingTypeStubs = false

[tool.mypy]
plugins = ['pydantic.mypy']
strict = true
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pyright>=1.1.402",
    "mypy>=1.16.1"
]

[tool.uv.workspace]
members = [ 
    "agent-game-dev-core",
    "agent-game-dev-base-sample",
]